--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "mis-publisher",
   "productName": "MisPublisher",
-  "version": "0.0.1",
-  "description":
-    "A tool to publish and update Miscreated mods using steam workshop",
+  "version": "0.0.2",
+  "description": "A tool to publish and update Miscreated mods using steam workshop",
   "main": ".webpack/main",
+  "repository": {
+    "url": "https://github.com/csprance/mis-publisher.git"
+  },
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -17,6 +19,18 @@
   "license": "MIT",
   "config": {
     "forge": {
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "csprance",
+              "name": "mis-publisher"
+            },
+            "prerelease": true
+          }
+        }
+      ],
       "packagerConfig": {
         "prune": true,
         "asar": true,
@@ -29,18 +43,6 @@
           "config": {
             "name": "mis-publisher"
           }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": ["darwin"]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
         }
       ],
       "plugins": [
@@ -75,8 +77,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
@@ -84,6 +84,7 @@
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
     "typesafe-actions": "^4.4.2",
+    "update-electron-app": "^1.5.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -98,6 +99,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.39",
     "@electron-forge/maker-zip": "^6.0.0-beta.39",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.39",
+    "@electron-forge/publisher-github": "^6.0.0-beta.39",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^24.0.15",
@@ -106,8 +108,6 @@
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.5",
-    "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.4",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
