!TA (Features) - Added in a lot of new features

--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@hot-loader/react-dom": "^16.8.6",
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.0",
+    "@material-ui/styles": "^4.3.0",
+    "draft-js": "^0.11.0",
+    "draft-js-bbcode-converter": "^0.1.8",
     "electron-squirrel-startup": "^1.0.0",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.1.0",
     "mousetrap": "^1.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -90,6 +92,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
@@ -101,6 +104,7 @@
     "@electron-forge/plugin-webpack": "^6.0.0-beta.39",
     "@electron-forge/publisher-github": "^6.0.0-beta.39",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/draft-js": "^0.10.34",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^24.0.15",
     "@types/mousetrap": "^1.6.3",
@@ -114,6 +118,7 @@
     "@typescript-eslint/parser": "^1.10.2",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.6",
+    "create-redux-boilerplate": "^2.0.0",
     "css-loader": "^3.0.0",
     "electron": "5.0.4",
     "electron-devtools-installer": "^2.2.4",
