--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins": [
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread",
+    "@babel/plugin-transform-runtime",
     "react-hot-loader/babel"
   ]
 }
